# raytracing

./: .clang-format  .clang-tidy  CMakeLists.txt  build.sh  git.sh
.githooks/: pre-commit
include/: Camera.h  Color.h  Constants.h  HitBase.h  HitList.h  HitSphere.h  Interval.h  Material.h  Ray.h  Vec3.h
src/: Camera.cpp  HitList.cpp  HitSphere.cpp  Ray.cpp  main.cpp
